--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
     "next": "15.1.6",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.83.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "22.12.0",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
