--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "file-saver": "^2.0.5",
+    "formidable": "^3.5.2",
     "googleapis": "^146.0.0",
     "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
+    "mime-types": "^2.1.35",
     "next": "15.1.6",
     "pdfmake": "^0.2.18",
     "react": "^19.0.0",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/file-saver": "^2.0.7",
+    "@types/formidable": "^3.4.5",
     "@types/node": "22.12.0",
     "@types/pdfmake": "^0.2.11",
     "@types/react": "19.0.8",
