Add SignaturePad and Modal components with styles, update TypeScript config and package dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/api/**/*.ts"
-  ],
+, "components/SignaturePad.js", "components/Modal.js"  ],
   "exclude": [
     "node_modules"
   ]
