--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "sass": "^1.83.4"
   },
   "devDependencies": {
