--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "reactjs-popup": "^2.0.6",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "signature_pad": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
