--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@docuseal/signature-maker-react": "^1.0.2",
     "archiver": "^7.0.1",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "googleapis": "^146.0.0",
     "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
+    "lemonadejs": "^5.0.2",
     "mime-types": "^2.1.35",
     "next": "15.1.6",
     "pdfmake": "^0.2.18",
