--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-signature-pad-wrapper": "^4.1.0",
     "reactjs-popup": "^2.0.6",
     "sass": "^1.83.4",
-    "signature_pad": "^5.0.7"
+    "signature_pad": "^1.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
