--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lemonadejs": "^5.0.2",
     "mime-types": "^2.1.35",
     "next": "15.1.6",
+    "nodemailer": "^6.10.1",
     "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
