--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "googleapis": "^146.0.0",
+    "idb-keyval": "^6.2.2",
     "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
     "lemonadejs": "^5.0.2",
